--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   url_launcher: ^6.0.15
   url_launcher_web: ^2.0.4
   mailto: ^2.0.0
+  google_fonts: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
